--- a/tiny_aes/trunk/Makefile
+++ b/tiny_aes/trunk/Makefile
@@ -1,5 +1,5 @@
 test_aes_128:./testbench/test_aes_128.v
 	verilator -O3 -cc --top-module test_aes_128 ./testbench/test_aes_128.v ./rtl/aes_128.v ./rtl/round.v ./rtl/table.v
 
-sim:./tb_cpp/tb.cpp
+sim:testfile.cpp
 	g++ -I obj_dir -I/usr/share/verilator/include -Lobj_dir testfile.cpp ./obj_dir/Vtest_aes_128.cpp ./obj_dir/Vtest_aes_128__Syms.cpp /usr/share/verilator/include/verilated.cpp -o test_aes_128
